@@ -94,10 +94,16 @@ class PropelObjectCollection extends PropelCollection
 	 * Get an array representation of the collection
 	 * Each object is turned into an array and the result is returned
 	 *
-	 * @param     string $keyColumn If null, the returned array uses an incremental index.
-	 *              Otherwise, the array is indexed using the specified column
+	 * @param     string  $keyColumn If null, the returned array uses an incremental index.
+	 *                    Otherwise, the array is indexed using the specified column
 	 * @param     boolean $usePrefix If true, the returned array prefixes keys 
-	 *              with the model class name ('Article_0', 'Article_1', etc).
+	 *                    with the model class name ('Article_0', 'Article_1', etc).
+	 * @param     string  $keyType (optional) One of the class type constants BasePeer::TYPE_PHPNAME, 
+	 *                    BasePeer::TYPE_STUDLYPHPNAME, BasePeer::TYPE_COLNAME, BasePeer::TYPE_FIELDNAME,
+	 *                    BasePeer::TYPE_NUM. Defaults to BasePeer::TYPE_PHPNAME.
+	 * @param     boolean $includeLazyLoadColumns (optional) Whether to include lazy loaded columns.
+	 *                    Defaults to TRUE.
+	 * @param     array   $alreadyDumpedObjects List of objects to skip to avoid recursion
 	 *
 	 * <code>
 	 * $bookCollection->toArray(); 
