@@ -157,4 +157,85 @@ class PropelModelPagerTest extends BookstoreEmptyTestBase
 		$pager = $this->getPager(4, 2);
 		$this->assertTrue($pager->isLastPage(), 'isLastPage() returns true on the last page');
 	}
+	
+	public function testIsFirstOnFirstPage()
+	{
+		$this->createBooks(5);
+		$pager = $this->getPager(3, 1);
+		foreach ($pager as $index => $book) {
+			if ($index == 0) {
+				$this->assertTrue($pager->isFirst());
+			} else {
+				$this->assertFalse($pager->isFirst());
+			}
+		}
+	}
+
+	public function testIsFirstOnNonFirstPage()
+	{
+		$this->createBooks(5);
+		$pager = $this->getPager(3, 2);
+		foreach ($pager as $index => $book) {
+			if ($index == 0) {
+				$this->assertTrue($pager->isFirst());
+			} else {
+				$this->assertFalse($pager->isFirst());
+			}
+		}
+	}
+
+	public function testIsLastOnNonLastPage()
+	{
+		$this->createBooks(5);
+		$pager = $this->getPager(3, 1);
+		foreach ($pager as $index => $book) {
+			if ($index == 2) {
+				$this->assertTrue($pager->isLast());
+			} else {
+				$this->assertFalse($pager->isLast());
+			}
+		}
+	}
+
+	public function testIsLastOnLastPage()
+	{
+		$this->createBooks(5);
+		$pager = $this->getPager(3, 2);
+		foreach ($pager as $index => $book) {
+			if ($index == 1) {
+				$this->assertTrue($pager->isLast());
+			} else {
+				$this->assertFalse($pager->isLast());
+			}
+		}
+	}
+	
+	public function testIsEmptyIsTrueOnEmptyPagers()
+	{
+		$pager = $this->getPager(4, 1);
+		$this->assertTrue($pager->isEmpty());
+	}
+	
+	public function testIsEmptyIsFalseOnNonEmptyPagers()
+	{
+		$this->createBooks(1);
+		$pager = $this->getPager(4, 1);
+		$this->assertFalse($pager->isEmpty());
+	}
+	
+	public function testIsOddAndIsEven()
+	{
+		$this->createBooks(5);
+		$pager = $this->getPager(4, 1);
+		foreach ($pager as $index => $book) {
+			if ($index % 2) {
+				$this->assertTrue($pager->isOdd());
+				$this->assertFalse($pager->isEven());
+			} else {
+				$this->assertFalse($pager->isOdd());
+				$this->assertTrue($pager->isEven());
+			}
+		}
+	}
+
 }
